fix: resolve routing conflicts between vercel.json and config.json
- Remove rewrites from vercel.json (conflicts with Build Output API v3)
- Simplify config.json to only define API routes
- Static files are now served automatically from .vercel/output/static/
- This should fix 404 errors on root path

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "buildCommand": "bash build.sh",
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/index.py"
-    }
-  ]
+  "buildCommand": "bash build.sh"
 }
