feat: Implement the core Notion AI Memo chat application, including UI, API, LLM integration, and Notion connectivity.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
-# Notion API (Required)
+
+# Notion integrations API (Required)
 # https://www.notion.so/profile/integrations
 NOTION_API_KEY=ntn_XXXXXXXXXXXX
+
+# 共有設定　notionページの３点メニュー 接続 から上記で作成した integrations の名前を探す。
 # https://www.notion.so/abc-11208XXXXXXXXXXXe86d51 -より後ろの数字部分
 NOTION_ROOT_PAGE_ID=2dXXXXXXXXXXXX
+# https://aistudio.google.com/api-keys
+
+
 
 # AI Providers (どれか一つ)
 # Google Gemini (Default)
