--- a/.env.example
+++ b/.env.example
@@ -38,13 +38,9 @@ DEFAULT_MULTIMODAL_MODEL=gemini/gemini-2.5-flash
 # Rate Limiting (Simple In-Memory Implementation)
 # レート制限を有効にするかどうか（本番環境では true 推奨）
 RATE_LIMIT_ENABLED=True
-# IP別: 1分あたりのリクエスト数　不使用
-RATE_LIMIT_PER_MINUTE=100
-# 参考値: 1時間あたりの総リクエスト数（インスタンス単位）
+# 1時間あたりの総リクエスト数（インスタンス単位）
 RATE_LIMIT_GLOBAL_PER_HOUR=1000
-# 古いアクセス履歴を削除する間隔（秒）※レート制限の精度には影響しません
-# 300秒 = 5分ごとに不要な履歴データをメモリから削除します（デフォルト推奨）
-RATE_LIMIT_CLEANUP_INTERVAL=300
+
 
 
 
