feat: introduce a new chat interface and API for the Notion AI Memo application.

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,8 @@ ANTHROPIC_API_KEY=
 # Debug Mode (Development Only - Remove in Production!)
 # デバッグエンドポイントとAIモデル選択機能を有効にします
 # 本番環境では必ずfalseに設定するか、この行を削除してください
-DEBUG_MODE=True
+# DEBUG_MODE=True  # 開発時のみコメントを外す
+DEBUG_MODE=False
 # テキストのみの場合のデフォルト（高速・安価なモデルを推奨）
 DEFAULT_TEXT_MODEL=gemini/gemini-2.5-flash
 # 画像を含むマルチモーダル入力の場合のデフォルト（Vision対応モデル必須）
