--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,27 @@ venv/
 .vscode/
 .pytest_cache/
 .ruff_cache/
+
+# Python compiled
+*.py[cod]
+*$py.class
+*.so
+
+# Logs
+*.log
+
+# OS specific
+Thumbs.db
+
+# Coverage
+htmlcov/
+.coverage
+.coverage.*
+
+# IDE
+*.swp
+*.swo
+
+# Project specific backup files
+*.bak
+models_api_response.json
