--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# Core Dependencies (Version Ranges for Flexibility)
+# For strict version pinning in production, use: pip freeze > requirements-lock.txt
 fastapi==0.121.0
 uvicorn==0.38.0
 notion-client==2.7.0
