feat: Introduce Gemini image generation capabilities with new API endpoints, frontend components, and comprehensive E2E tests.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ NOTION_API_KEY=
 # NOTION_ROOT_PAGE_ID=2dXXXXX...
 NOTION_ROOT_PAGE_ID=
 
+# Config database ID (Optional - システムプロンプト格納用)
+# NOTION_CONFIG_DB_ID=
+NOTION_CONFIG_DB_ID=
+
 
 
 # AI Providers (どれか一つ)
@@ -24,16 +28,25 @@ OPENAI_API_KEY=
 # ANTHROPIC_API_KEY=sk-ant-...
 ANTHROPIC_API_KEY=
 
+# Vertex AI (Optional - Google Cloud Platform)
+# GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account.json
+# VERTEX_AI_PROJECT=your-gcp-project-id
+# VERTEX_AI_LOCATION=us-central1
+
+# Default Models (Optional - モデル指定)
+# DEFAULT_TEXT_MODEL=gemini/gemini-2.5-flash
+# DEFAULT_MULTIMODAL_MODEL=gemini/gemini-2.5-flash
+
+# LiteLLM Settings (Optional - 詳細設定)
+# LITELLM_VERBOSE=False
+# LITELLM_TIMEOUT=30
+# LITELLM_MAX_RETRIES=1
+
 # Debug Mode (Development Only - Remove in Production!)
 # デバッグエンドポイントとAIモデル選択機能を有効にします
 # 本番環境では必ずfalseに設定するか、この行を削除してください
 # DEBUG_MODE=True  # 開発時のみコメントを外す
 DEBUG_MODE=False
-# テキストのみの場合のデフォルト（高速・安価なモデルを推奨）
-DEFAULT_TEXT_MODEL=gemini/gemini-2.5-flash
-# 画像を含むマルチモーダル入力の場合のデフォルト（Vision対応モデル必須）
-DEFAULT_MULTIMODAL_MODEL=gemini/gemini-2.5-flash
-
 
 
 # Rate Limiting (Simple In-Memory Implementation)
