--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-# Core Dependencies (Version Ranges for Flexibility)
-# For strict version pinning in production, use: pip freeze > requirements-lock.txt
+# Core Dependencies
 fastapi==0.121.0
 uvicorn==0.38.0
 notion-client==2.7.0
-litellm>=1.56.0,<2.0.0
+litellm==1.81.8
+google-genai>=1.62.0
 python-dotenv==1.0.1
-httpx==0.27.2
+httpx>=0.27.0
 tzdata>=2024.1
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
